# fparser

./: .gitignore  CMakeLists.txt  CMakePresets.json  fpconfig.hh
.github/workflows/: ci.yml
